# cnts

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  cookies.txt  docker-compose.yml  donneurs_senegal_2000.csv  donneurs_senegal_2000.json  fix_admin_role.py  package-lock.json  package.json  parse_svg.py  seed_senegal_data.py  start.sh  stop.sh
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_stock_fractionnement.py  0003_product_rules_and_constraints.py  0004_fractionnement_recettes.py  0005_distribution_module.py  0006_reservations_ligne_receveur.py  0007_poche_isbt_label.py  0008_hemovigilance.py  0009_rappel_workflow.py  0010_sync_offline.py  0011_auth_users_2fa.py  0012_cold_chain.py  0013_product_rule_isbt_code.py  0014_cartes_donneur.py  0015_phase1_to_6_tables.py  1a385b40d921_add_missing_donor_fields.py  61af3582e78d_add_article_model.py  7c82261f596f_add_hopital_id_to_receveur.py  7eaf099625e6_add_donor_details.py  a7b686c3d949_add_expiration_rules_table.py  a9c685b6b025_add_patient_space_models.py  b16e41cf02c6_add_indexes_for_filtering.py  d563798ae98f_add_extended_fields_to_receveur.py  ed7185b7458a_restore_donneurs_updated_at.py  remove_cni_plaintext.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/tests/: conftest.py  test_auth_2fa_disable.py  test_cold_chain.py  test_distribution.py  test_distribution_e2e.py  test_health.py  test_isbt128.py  test_liberation.py  test_poches.py  test_sync_e2e.py
backend/web/: package-lock.json
(+376 files in other folders)
