 [project]
 name = "cnts-backend"
 version = "0.1.0"
 description = "Backend API FastAPI pour le SGI-CNTS (Dakar)."
 requires-python = ">=3.11"
 dependencies = [
   "fastapi>=0.110",
   "uvicorn[standard]>=0.27",
   "pydantic>=2.6",
   "pydantic-settings>=2.2",
   "email-validator>=2.1.0",
   "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "python-docx>=1.1",
  "reportlab>=4.0",
  "python-pptx>=0.6",
  "python-multipart>=0.0.9",
  "celery[redis]>=5.3",
  "jinja2>=3.1",
]
 
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0",
   "httpx>=0.27",
   "ruff>=0.4",
 ]
 
 [tool.ruff]
 line-length = 100
 target-version = "py311"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
